[tool.poetry]
name = "paxtrack"
version = "0.1.0"
description = ""
authors = ["Roy Williams <roy.williams.iii@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.8"
httpx = ">=0.21.1"
pydantic = ">=1.9.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
mypy = ">=0.930"
mypy-extensions = ">=0.4.3"
black = ">=21.12b0"
devtools = {extras = ["pygments"], version = "^0.8.0"}
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
